--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                                             <h5 class="text-white mb-2">About Us</h5>
                                             <br>
 
-                                            <p class="text-white">Being This Guy, we're a dynamic marketing agency dedicated to elevating your brand. From strategic planning to creative execution, we deliver impactful campaigns that resonate and drive meaningful engagement.</p>
+                                            <p class="text-white">We're a dynamic agency elevating brands through strategic planning and impactful campaigns, fostering meaningful engagement with creative execution.</p>
 
                                             <a href="about-us.html" class="btn custom-btn mt-2 mt-lg-3">Learn More</a>
                                         </div>
