--- a/about-us.html
+++ b/about-us.html
@@ -278,7 +278,7 @@
 
                     <div class="col-lg-3 col-12 mb-4 pb-2">
                         <a class="navbar-brand mb-2" href="#top">
-                            <img src="being_this_guy_written.png" class="footer-logo smoothscroll" alt="main logo">
+                            <img src="Being_this_guy_written.png" class="footer-logo smoothscroll" alt="main logo">
                             <!-- <i class="bi-back"></i>
                             <span>Topic</span> -->
                         </a>
