--- a/index.html
+++ b/index.html
@@ -328,18 +328,16 @@
                                     <div class="row">
                                         <div id="el-101" class="col-lg-4 col-md-6 col-12 mb-4 mb-lg-0">
                                             <div class="custom-block bg-white shadow-lg">
-                                                <a href="topics-detail.html">
+                                                <a href="https://amzn.to/3RVz30g">
                                                     <div class="d-flex">
                                                         <div>
-                                                            <h5 class="mb-2">Web Design</h5>
+                                                            <h5 class="mb-2">Allen Solly Sweatshirt</h5>
 
-                                                            <p class="mb-0">Topic Listing Template based on Bootstrap 5</p>
+                                                            <p class="mb-0">Allen Solly Men's Cotton Crew Neck Sweatshirt</p>
                                                         </div>
 
                                                         <span class="badge bg-blue rounded-pill ms-auto">101</span>
                                                     </div>
-
-                                                    <!-- <img src="images/topics/undraw_Remote_design_team_re_urdx.png" class="custom-block-image img-fluid" alt=""> -->
                                                 </a>
                                             </div>
                                         </div>
