--- a/index.html
+++ b/index.html
@@ -208,17 +208,7 @@
                         <div class="col-lg-4 col-12 mb-l">
                             <!-- mb-4  this can be used above -->
                             <div class="custom-block bg-white shadow-lg">
-                                <a href="topics-detail.html">
-                                    <!-- <div class="d-flex">
-                                        <div>
-                                            <h5 class="mb-2">Web Design</h5>
-
-                                            <p class="mb-0">When you search for free CSS templates, you will notice that TemplateMo is one of the best websites.</p>
-                                        </div>
-
-                                        <span class="badge bg-blue rounded-pill ms-auto">14</span>
-                                    </div> -->
-
+                                <a href="about-us.html">
                                     <img src="Being_this_guy_written.png" class="custom-block-image img-fluid" alt="">
                                 </a>
                             </div>
@@ -344,36 +334,32 @@
 
                                         <div id="el-102" class="col-lg-4 col-md-6 col-12 mb-4 mb-lg-0">
                                             <div class="custom-block bg-white shadow-lg">
-                                                <a href="topics-detail.html" target=”_blank”>
+                                                <a href="https://amzn.to/421PI70" target=”_blank”>
                                                     <div class="d-flex">
                                                         <div>
-                                                            <h5 class="mb-2">Graphic</h5>
+                                                            <h5 class="mb-2">Endeavour Trackpants</h5>
 
-                                                                <p class="mb-0">Lorem Ipsum dolor sit amet consectetur</p>
+                                                                <p class="mb-0">ENDEAVOUR WEAR Men's Regular Fit Trackpants</p>
                                                         </div>
 
                                                         <span class="badge bg-blue rounded-pill ms-auto">102</span>
                                                     </div>
-
-                                                    <!-- <img src="images/topics/undraw_Redesign_feedback_re_jvm0.png" class="custom-block-image img-fluid" alt=""> -->
                                                 </a>
                                             </div>
                                         </div>
 
                                         <div id="el-103" class="col-lg-4 col-md-6 col-12 mb-4 mb-lg-0">
                                             <div class="custom-block bg-white shadow-lg">
-                                                <a href="topics-detail.html" target=”_blank”>
+                                                <a href="https://amzn.to/3S2fXG6" target=”_blank”>
                                                     <div class="d-flex">
                                                         <div>
-                                                            <h5 class="mb-2">Graphic</h5>
+                                                            <h5 class="mb-2">Van Heusen Polo Shirt</h5>
 
-                                                                <p class="mb-0">Lorem Ipsum dolor sit amet consectetur</p>
+                                                                <p class="mb-0">Van Heusen Men's Regular Fit Polo Shirt</p>
                                                         </div>
 
                                                         <span class="badge bg-blue rounded-pill ms-auto">103</span>
                                                     </div>
-
-                                                    <!-- <img src="images/topics/undraw_Redesign_feedback_re_jvm0.png" class="custom-block-image img-fluid" alt=""> -->
                                                 </a>
                                             </div>
                                         </div>
@@ -390,8 +376,6 @@
 
                                                         <span class="badge bg-blue rounded-pill ms-auto">104</span>
                                                     </div>
-
-                                                    <!-- <img src="images/topics/undraw_Redesign_feedback_re_jvm0.png" class="custom-block-image img-fluid" alt=""> -->
                                                 </a>
                                             </div>
                                         </div>
@@ -408,8 +392,6 @@
 
                                                         <span class="badge bg-blue rounded-pill ms-auto">105</span>
                                                     </div>
-
-                                                    <!-- <img src="images/topics/undraw_Redesign_feedback_re_jvm0.png" class="custom-block-image img-fluid" alt=""> -->
                                                 </a>
                                             </div>
                                         </div>
@@ -426,8 +408,6 @@
 
                                                         <span class="badge bg-blue rounded-pill ms-auto">106</span>
                                                     </div>
-
-                                                    <!-- <img src="images/topics/undraw_Redesign_feedback_re_jvm0.png" class="custom-block-image img-fluid" alt=""> -->
                                                 </a>
                                             </div>
                                         </div>
@@ -444,8 +424,6 @@
 
                                                         <span class="badge bg-blue rounded-pill ms-auto">107</span>
                                                     </div>
-
-                                                    <!-- <img src="images/topics/colleagues-working-cozy-office-medium-shot.png" class="custom-block-image img-fluid" alt=""> -->
                                                 </a>
                                             </div>
                                         </div>
@@ -485,8 +463,6 @@
 
                                                         <span class="badge bg-blue rounded-pill ms-auto">201</span>
                                                     </div>
-
-                                                    <!-- <img src="images/topics/undraw_Remote_design_team_re_urdx.png" class="custom-block-image img-fluid" alt=""> -->
                                                 </a>
                                             </div>
                                         </div>
