--- a/index.html
+++ b/index.html
@@ -366,12 +366,12 @@
 
                                         <div id="el-104" class="col-lg-4 col-md-6 col-12 mb-4 mb-lg-0">
                                             <div class="custom-block bg-white shadow-lg">
-                                                <a href="topics-detail.html" target=”_blank”>
+                                                <a href="https://amzn.to/3HIHO9D" target=”_blank”>
                                                     <div class="d-flex">
                                                         <div>
-                                                            <h5 class="mb-2">Graphic</h5>
+                                                            <h5 class="mb-2">Alyne Lycra Petticoat</h5>
 
-                                                                <p class="mb-0">Lorem Ipsum dolor sit amet consectetur</p>
+                                                                <p class="mb-0">ALYNE Lycra Saree Shapewear Petticoat for Women, Women's Blended Saree Shapewear</p>
                                                         </div>
 
                                                         <span class="badge bg-blue rounded-pill ms-auto">104</span>
@@ -382,12 +382,12 @@
 
                                         <div id="el-105" class="col-lg-4 col-md-6 col-12 mb-4 mb-lg-0">
                                             <div class="custom-block bg-white shadow-lg">
-                                                <a href="topics-detail.html" target=”_blank”>
+                                                <a href="https://amzn.to/3tXsQJk" target=”_blank”>
                                                     <div class="d-flex">
                                                         <div>
-                                                            <h5 class="mb-2">Graphic</h5>
+                                                            <h5 class="mb-2">Brandonn Baby Jumpsuit</h5>
 
-                                                                <p class="mb-0">Lorem Ipsum dolor sit amet consectetur</p>
+                                                                <p class="mb-0">BRANDONN Unisex Baby Flannel Jumpsuit Panda Style Cosplay Clothes Bunting Outfits Snowsuit Hooded Romper Outwear</p>
                                                         </div>
 
                                                         <span class="badge bg-blue rounded-pill ms-auto">105</span>
