--- a/about-us.html
+++ b/about-us.html
@@ -174,8 +174,7 @@
                 </div>
             </section>
 
-
-            <section class="section-padding section-bg">
+           <!--<section class="section-padding section-bg">
                 <div class="container">
                     <div class="row justify-content-center">
 
@@ -197,7 +196,7 @@
 
                     </div>
                 </div>
-            </section>
+            </section> -->
         </main>
 		
         <!-- <footer id="footer-bar" class="site-footer section-padding">
