--- a/index.html
+++ b/index.html
@@ -398,12 +398,12 @@
 
                                         <div id="el-106" class="col-lg-4 col-md-6 col-12 mb-4 mb-lg-0">
                                             <div class="custom-block bg-white shadow-lg">
-                                                <a href="topics-detail.html" target=”_blank”>
+                                                <a href="https://amzn.to/3U0QNdv" target=”_blank”>
                                                     <div class="d-flex">
                                                         <div>
-                                                            <h5 class="mb-2">Graphic</h5>
+                                                            <h5 class="mb-2">Ausk Tshirt</h5>
 
-                                                                <p class="mb-0">Lorem Ipsum dolor sit amet consectetur</p>
+                                                                <p class="mb-0">AUSK T-Shirt for Mens Double Stripes on Chest (Color-Mahroon, Size-S).</p>
                                                         </div>
 
                                                         <span class="badge bg-blue rounded-pill ms-auto">106</span>
@@ -414,12 +414,12 @@
 
                                         <div id="el-107" class="col-lg-4 col-md-6 col-12">
                                             <div class="custom-block bg-white shadow-lg">
-                                                <a href="topics-detail.html" target=”_blank”>
+                                                <a href="https://amzn.to/3TZj4Bc" target=”_blank”>
                                                     <div class="d-flex">
                                                         <div>
-                                                            <h5 class="mb-2">Logo Design</h5>
+                                                            <h5 class="mb-2">Selvia Men's Joggers</h5>
 
-                                                                <p class="mb-0">Lorem Ipsum dolor sit amet consectetur</p>
+                                                                <p class="mb-0">Selvia Men's Solid Lycra Full Elastic Jogger Track Pant. </p>
                                                         </div>
 
                                                         <span class="badge bg-blue rounded-pill ms-auto">107</span>
@@ -453,12 +453,12 @@
                                     <div class="row">
                                         <div id="el-201" class="col-lg-4 col-md-6 col-12 mb-4 mb-lg-0">
                                             <div class="custom-block bg-white shadow-lg">
-                                                <a href="topics-detail.html" target=”_blank”>
+                                                <a href="https://amzn.to/4aW9Mfn" target=”_blank”>
                                                     <div class="d-flex">
                                                         <div>
-                                                            <h5 class="mb-2">Web Design</h5>
+                                                            <h5 class="mb-2">American Tourister Backpack</h5>
 
-                                                            <p class="mb-0">Topic Listing Template based on Bootstrap 5</p>
+                                                            <p class="mb-0">American Tourister Valex 28 Ltrs Large Laptop Backpack with Bottle Pocket and Front Organizer</p>
                                                         </div>
 
                                                         <span class="badge bg-blue rounded-pill ms-auto">201</span>
@@ -469,18 +469,16 @@
 
                                         <div id="el-202" class="col-lg-4 col-md-6 col-12 mb-4 mb-lg-0">
                                             <div class="custom-block bg-white shadow-lg">
-                                                <a href="topics-detail.html" target=”_blank”>
+                                                <a href="https://amzn.to/3Hr2wKK" target=”_blank”>
                                                     <div class="d-flex">
                                                         <div>
-                                                            <h5 class="mb-2">Graphic</h5>
+                                                            <h5 class="mb-2">Ambrane Type C Cable</h5>
 
-                                                                <p class="mb-0">Lorem Ipsum dolor sit amet consectetur</p>
+                                                                <p class="mb-0">Ambrane Unbreakable 60W / 3A Fast Charging 1.5m Braided Type C Cable, 480Mbps Data Sync, Quick Charge 3.0</p>
                                                         </div>
 
                                                         <span class="badge bg-blue rounded-pill ms-auto">202</span>
                                                     </div>
-
-                                                    <!-- <img src="images/topics/undraw_Redesign_feedback_re_jvm0.png" class="custom-block-image img-fluid" alt=""> -->
                                                 </a>
                                             </div>
                                         </div>
