--- a/index.html
+++ b/index.html
@@ -485,90 +485,80 @@
 
                                         <div id="el-203" class="col-lg-4 col-md-6 col-12 mb-4 mb-lg-0">
                                             <div class="custom-block bg-white shadow-lg">
-                                                <a href="topics-detail.html" target=”_blank”>
+                                                <a href="https://amzn.to/428QTld" target=”_blank”>
                                                     <div class="d-flex">
                                                         <div>
-                                                            <h5 class="mb-2">Graphic</h5>
+                                                            <h5 class="mb-2">Re-Writable Writing Pad</h5>
 
-                                                                <p class="mb-0">Lorem Ipsum dolor sit amet consectetur</p>
+                                                                <p class="mb-0">Toysbuddy Re-Writable LCD Writing Tablet Pad with Screen 21.5cm (8.5Inch)</p>
                                                         </div>
 
                                                         <span class="badge bg-blue rounded-pill ms-auto">203</span>
                                                     </div>
-
-                                                    <!-- <img src="images/topics/undraw_Redesign_feedback_re_jvm0.png" class="custom-block-image img-fluid" alt=""> -->
                                                 </a>
                                             </div>
                                         </div>
 
                                         <div id="el-204" class="col-lg-4 col-md-6 col-12 mb-4 mb-lg-0">
                                             <div class="custom-block bg-white shadow-lg">
-                                                <a href="topics-detail.html" target=”_blank”>
+                                                <a href="https://amzn.to/48CLeGp" target=”_blank”>
                                                     <div class="d-flex">
                                                         <div>
-                                                            <h5 class="mb-2">Graphic</h5>
+                                                            <h5 class="mb-2">HP 64GB Pen-Drive</h5>
 
-                                                                <p class="mb-0">Lorem Ipsum dolor sit amet consectetur</p>
+                                                                <p class="mb-0">HP v236w USB 2.0 64GB Pen Drive, Metal, Silver</p>
                                                         </div>
 
                                                         <span class="badge bg-blue rounded-pill ms-auto">204</span>
                                                     </div>
-
-                                                    <!-- <img src="images/topics/undraw_Redesign_feedback_re_jvm0.png" class="custom-block-image img-fluid" alt=""> -->
                                                 </a>
                                             </div>
                                         </div>
 
                                         <div id="el-205" class="col-lg-4 col-md-6 col-12 mb-4 mb-lg-0">
                                             <div class="custom-block bg-white shadow-lg">
-                                                <a href="topics-detail.html" target=”_blank”>
+                                                <a href="https://amzn.to/48Kpmt6" target=”_blank”>
                                                     <div class="d-flex">
                                                         <div>
-                                                            <h5 class="mb-2">Graphic</h5>
+                                                            <h5 class="mb-2">Callas Multipurpose Foldable Laptop Table</h5>
 
-                                                                <p class="mb-0">Lorem Ipsum dolor sit amet consectetur</p>
+                                                                <p class="mb-0">Callas Multipurpose Foldable Laptop Table with Cup Holder | Drawer | Mac Holder | Metal</p>
                                                         </div>
 
                                                         <span class="badge bg-blue rounded-pill ms-auto">205</span>
                                                     </div>
-
-                                                    <!-- <img src="images/topics/undraw_Redesign_feedback_re_jvm0.png" class="custom-block-image img-fluid" alt=""> -->
                                                 </a>
                                             </div>
                                         </div>
 
                                         <div id="el-206" class="col-lg-4 col-md-6 col-12 mb-4 mb-lg-0">
                                             <div class="custom-block bg-white shadow-lg">
-                                                <a href="topics-detail.html" target=”_blank”>
+                                                <a href="https://amzn.to/3tPsSDj" target=”_blank”>
                                                     <div class="d-flex">
                                                         <div>
-                                                            <h5 class="mb-2">Graphic</h5>
+                                                            <h5 class="mb-2">Oakter Mini UPS</h5>
 
-                                                                <p class="mb-0">Lorem Ipsum dolor sit amet consectetur</p>
+                                                                <p class="mb-0">Oakter Mini UPS for 12V WiFi Router Broadband Modem | Backup Upto 4 Hours</p>
                                                         </div>
 
                                                         <span class="badge bg-blue rounded-pill ms-auto">206</span>
                                                     </div>
-
-                                                    <!-- <img src="images/topics/undraw_Redesign_feedback_re_jvm0.png" class="custom-block-image img-fluid" alt=""> -->
                                                 </a>
                                             </div>
                                         </div>
 
                                         <div id="el-207" class="col-lg-4 col-md-6 col-12">
                                             <div class="custom-block bg-white shadow-lg">
-                                                <a href="topics-detail.html" target=”_blank”>
+                                                <a href="https://amzn.to/3vIlaLL" target=”_blank”>
                                                     <div class="d-flex">
                                                         <div>
-                                                            <h5 class="mb-2">Logo Design</h5>
+                                                            <h5 class="mb-2">Samsung Galaxy Tab S6 Lite</h5>
 
-                                                                <p class="mb-0">Lorem Ipsum dolor sit amet consectetur</p>
+                                                                <p class="mb-0">Samsung Galaxy Tab S6 Lite 26.31 cm (10.4 inch), S-Pen in Box, Slim and Light, Dolby Atmos Sound, 4 GB RAM, 64 GB ROM</p>
                                                         </div>
 
                                                         <span class="badge bg-blue rounded-pill ms-auto">207</span>
                                                     </div>
-
-                                                    <!-- <img src="images/topics/colleagues-working-cozy-office-medium-shot.png" class="custom-block-image img-fluid" alt=""> -->
                                                 </a>
                                             </div>
                                         </div>
