--- a/index.html
+++ b/index.html
@@ -588,126 +588,112 @@
                                     <div class="row">
                                         <div id="el-301" class="col-lg-4 col-md-6 col-12 mb-4 mb-lg-0">
                                             <div class="custom-block bg-white shadow-lg">
-                                                <a href="topics-detail.html" target=”_blank”>
+                                                <a href="https://amzn.to/3HlzU5P" target=”_blank”>
                                                     <div class="d-flex">
                                                         <div>
-                                                            <h5 class="mb-2">Web Design</h5>
+                                                            <h5 class="mb-2">Diva Fashion Royal Blue Bracelet</h5>
 
-                                                            <p class="mb-0">Topic Listing Template based on Bootstrap 5</p>
+                                                            <p class="mb-0">Shining Diva Fashion Royal Blue Crystal CZ Silver Plated Stylish Bracelet Gift</p>
                                                         </div>
 
                                                         <span class="badge bg-blue rounded-pill ms-auto">301</span>
                                                     </div>
-
-                                                    <!-- <img src="images/topics/undraw_Remote_design_team_re_urdx.png" class="custom-block-image img-fluid" alt=""> -->
                                                 </a>
                                             </div>
                                         </div>
 
                                         <div id="el-302" class="col-lg-4 col-md-6 col-12 mb-4 mb-lg-0">
                                             <div class="custom-block bg-white shadow-lg">
-                                                <a href="topics-detail.html" target=”_blank”>
+                                                <a href="https://amzn.to/3O7DKDj" target=”_blank”>
                                                     <div class="d-flex">
                                                         <div>
-                                                            <h5 class="mb-2">Graphic</h5>
+                                                            <h5 class="mb-2">Stylish Birthday Sash and Crown</h5>
 
-                                                                <p class="mb-0">Lorem Ipsum dolor sit amet consectetur</p>
+                                                                <p class="mb-0">Shining Diva Fashion Latest Stylish Birthday Sash and Crown - Pack of 2 Pcs</p>
                                                         </div>
 
                                                         <span class="badge bg-blue rounded-pill ms-auto">302</span>
                                                     </div>
-
-                                                    <!-- <img src="images/topics/undraw_Redesign_feedback_re_jvm0.png" class="custom-block-image img-fluid" alt=""> -->
                                                 </a>
                                             </div>
                                         </div>
 
                                         <div id="el-303" class="col-lg-4 col-md-6 col-12 mb-4 mb-lg-0">
                                             <div class="custom-block bg-white shadow-lg">
-                                                <a href="topics-detail.html" target=”_blank”>
+                                                <a href="https://amzn.to/4b3laG5" target=”_blank”>
                                                     <div class="d-flex">
                                                         <div>
-                                                            <h5 class="mb-2">Graphic</h5>
+                                                            <h5 class="mb-2">Hair Jewellery Clip Set</h5>
 
-                                                                <p class="mb-0">Lorem Ipsum dolor sit amet consectetur</p>
+                                                                <p class="mb-0">YouBella Hair Jewellery Clip Set for Baby Band for Girls (Pack of 18) (Pink)</p>
                                                         </div>
 
                                                         <span class="badge bg-blue rounded-pill ms-auto">303</span>
                                                     </div>
-
-                                                    <!-- <img src="images/topics/undraw_Redesign_feedback_re_jvm0.png" class="custom-block-image img-fluid" alt=""> -->
                                                 </a>
                                             </div>
                                         </div>
 
                                         <div id="el-304" class="col-lg-4 col-md-6 col-12 mb-4 mb-lg-0">
                                             <div class="custom-block bg-white shadow-lg">
-                                                <a href="topics-detail.html" target=”_blank”>
+                                                <a href="https://amzn.to/424dSxL" target=”_blank”>
                                                     <div class="d-flex">
                                                         <div>
-                                                            <h5 class="mb-2">Graphic</h5>
+                                                            <h5 class="mb-2">Diva Stylish Bracelet</h5>
 
-                                                                <p class="mb-0">Lorem Ipsum dolor sit amet consectetur</p>
+                                                                <p class="mb-0">Shining Diva Fashion Stylish Bracelet for Women</p>
                                                         </div>
 
                                                         <span class="badge bg-blue rounded-pill ms-auto">304</span>
                                                     </div>
-
-                                                    <!-- <img src="images/topics/undraw_Redesign_feedback_re_jvm0.png" class="custom-block-image img-fluid" alt=""> -->
                                                 </a>
                                             </div>
                                         </div>
 
                                         <div id="el-305" class="col-lg-4 col-md-6 col-12 mb-4 mb-lg-0">
                                             <div class="custom-block bg-white shadow-lg">
-                                                <a href="topics-detail.html" target=”_blank”>
+                                                <a href="https://amzn.to/3tXxtmQ" target=”_blank”>
                                                     <div class="d-flex">
                                                         <div>
-                                                            <h5 class="mb-2">Graphic</h5>
+                                                            <h5 class="mb-2">Diva Charm Bracelet</h5>
 
-                                                                <p class="mb-0">Lorem Ipsum dolor sit amet consectetur</p>
+                                                                <p class="mb-0">Shining Diva Fashion Latest Stylish Austrian Crystal Rose Gold Charm Bracelet for Women</p>
                                                         </div>
 
                                                         <span class="badge bg-blue rounded-pill ms-auto">305</span>
                                                     </div>
-
-                                                    <!-- <img src="images/topics/undraw_Redesign_feedback_re_jvm0.png" class="custom-block-image img-fluid" alt=""> -->
                                                 </a>
                                             </div>
                                         </div>
 
                                         <div id="el-306" class="col-lg-4 col-md-6 col-12 mb-4 mb-lg-0">
                                             <div class="custom-block bg-white shadow-lg">
-                                                <a href="topics-detail.html" target=”_blank”>
+                                                <a href="https://amzn.to/3OalLvQ" target=”_blank”>
                                                     <div class="d-flex">
                                                         <div>
-                                                            <h5 class="mb-2">Graphic</h5>
+                                                            <h5 class="mb-2">Platinum Plated Crystal Butterfly Earrings</h5>
 
-                                                                <p class="mb-0">Lorem Ipsum dolor sit amet consectetur</p>
+                                                                <p class="mb-0">Valentine Gift By Shining Diva Italian Designer Platinum Plated Crystal Butterfly Earrings Chain Pendant Necklace Combo Jewellery Set for Women and Girls (Blue)</p>
                                                         </div>
 
                                                         <span class="badge bg-blue rounded-pill ms-auto">306</span>
                                                     </div>
-
-                                                    <!-- <img src="images/topics/undraw_Redesign_feedback_re_jvm0.png" class="custom-block-image img-fluid" alt=""> -->
                                                 </a>
                                             </div>
                                         </div>
 
                                         <div id="el-307" class="col-lg-4 col-md-6 col-12">
                                             <div class="custom-block bg-white shadow-lg">
-                                                <a href="topics-detail.html" target=”_blank”>
+                                                <a href="https://amzn.to/4b29DXG" target=”_blank”>
                                                     <div class="d-flex">
                                                         <div>
-                                                            <h5 class="mb-2">Logo Design</h5>
+                                                            <h5 class="mb-2">Butterfly Jewellery Necklace Set</h5>
 
-                                                                <p class="mb-0">Lorem Ipsum dolor sit amet consectetur</p>
+                                                                <p class="mb-0">Shining Diva Fashion 5 Pcs Latest Stylish Butterfly Jewellery Necklace Set for Women Pendant Necklace Gifts for Girls</p>
                                                         </div>
 
                                                         <span class="badge bg-blue rounded-pill ms-auto">307</span>
                                                     </div>
-
-                                                    <!-- <img src="images/topics/colleagues-working-cozy-office-medium-shot.png" class="custom-block-image img-fluid" alt=""> -->
                                                 </a>
                                             </div>
                                         </div>
